[#138] Add opens to java.desktop/javax.swing.text
+ Updated sbt-intellij-plugin to 3.20.1